# fizzysearch

./: 404.html  Dockerfile  LICENSE  README.md  fizzysearch.py  index.html  mkdocs.yml  pizza.nt  pyproject.toml  test.py  test_all.py  test_bloomtyper.py  test_rdf2vec.py
.github/workflows/: docker-image.yml  docs.yml
docs/: api_reference.md  bloomtyper.md  fts.md  index.md  rdf2vec.md  semantic.md  start.md
docs/overrides/partials/: logo.html
search/: search_index.json
src/fizzysearch/: __init__.py  __main__.py  bloomtyper.py  fts.py  rdf2vec.py  reader.py  rewriting.py
start/: index.html
