[tool.poetry]
name = "fizzysearch"
version = "0.10"
description = "A SPARQL rewriter that performs enhanced searches"
homepage = "https://github.com/ISE-FIZKarlsruhe/fizzysearch"
repository = "https://github.com/ISE-FIZKarlsruhe/fizzysearch"
keywords = ["SPARQL", "search", "RDF", "Linked Data"]
license = "MIT"
authors = ["Etienne Posthumus <ep@epoz.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
